[build-system]
requires = ["setuptools>=68", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "configflow"
version = "0.2.2"
description = "Shared config loader, env resolver, and generic CRUD API factory for Analytic AI services."
readme = "README.md"
requires-python = ">=3.9"
license-files = ["LICENSE"]
keywords = ["config", "env", "settings", "crud", "api", "clickhouse"]
authors = [
  {name = "sreeyenan"}
]

dependencies = [
  "clickhouse-core",
]

[project.optional-dependencies]
protected = ["Cython>=3.0"]
api = [
  "fastapi>=0.100.0",
  "pydantic>=2.0.0",
]
all = [
  "Cython>=3.0",
  "fastapi>=0.100.0",
  "pydantic>=2.0.0",
]

[tool.setuptools]
include-package-data = true
packages = ["config_core"]
package-dir = {"config_core" = "."}

[tool.setuptools.package-data]
config_core = [
  "VERSION",
  "CHANGELOG.md",
  "RELEASE.md",
  "ENVIRONMENT_VARIABLES.md",
]
